testdata/cases/analyze/unsupported_binary_write.expected
testdata/cases/analyze/unsupported_binary_write.go:9:48: error[unsupported-binary-write]: value of type int cannot be used with binary.Write
